<resources>

   <!-- <string name="app_name">VERSION 1</string>-->
    <string name="app_name">Kotak Collection</string>
    <string name="clientid">1013</string>

    <string name="product_pickup">Pickup</string>
    <string name="product_ptp_online">PTP_Online</string>
    <string name="product_ptp_branch">PTP_branch</string>
    <string name="product_claims_paid">Claims_Paid</string>
    <string name="product_dispute_mgmt">Dispute_Mgmt</string>
    <string name="product_NC_validation">NC_Validation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="tracking_stopped">Location Tracking stopped</string>
    <string name="tracking_started">Location Tracking started</string>
    <string name="check_internet">Please Check your Internet</string>
    <string name="choose_duty">Choose Duty options from the below</string>
    <string name="start_msg">Please click start button to start work</string>
    <string name="old_pass">OLD PASSWORD</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>
    <string name="server_error">Server Error</string>
    <string name="timeout_error">TimeOut Error</string>
    <string name="want_to_logout">Are you sure, You want to logout?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enable_gps">Your GPS seems to be disabled, Please enable it</string>
    <string name="signin">Sign In</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="want_to_continue">Are you sure, You want to Continue</string>
    <string name="loading">Loading...</string>

    <string name="pickup">PICKUP</string>
    <string name="handshake_delivery">HANDSHAKE/DELIVERY</string>
    <string name="return_handshake_delivery">RETURN HANDSHAKE/DELIVERY</string>
    <string name="return_pickup">RETURN PICKUP</string>
    <string name="rto">RTO</string>
    <string name="cash_handover">CASH HANDOVER</string>
    <string name="product_list">View Product</string>
    <string name="view_attempt">View Attempt</string>
    <string name="reschedule">Reschedule</string>
    <string name="collect_summary">Collect Summary</string>
    <string name="signature">Signature</string>
    <string name="reschedule_datetime">Reshedule Date &amp; Time</string>

    <!--Alert Message-->
    <string name="select_subreason">Select Sub Reason</string>
    <string name="select_date">Select Date</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="enter_mobileno_landline">Enter Mobile or Landline No</string>
    <string name="enter_mobileno">Enter Mobile No</string>
    <string name="enter_landline">Enter Landline No</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="choose_payment">Choose Payment Option</string>
    <string name="choose_reason">Choose Not Collect Reason</string>

    <!--EditText Hint-->
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="enter_no">Enter Mobile Number</string>
    <string name="select_app">Select 1mg or GoFynd to Login</string>
    <string name="enter_valid_no">Enter Valid mobile Number</string>
    <string name="nopickup_available">No Pickup Available</string>
    <string name="nocollect_available">No Collection Available</string>
    <string name="nodelivery_available">No Delivery Available</string>
    <string name="nodata_available">No Data Available</string>
    <string name="shipment_date">Shipment Date: </string>
    <string name="lead_date">Lead Date: </string>
    <string name="bag_id">Bag ID : </string>
    <string name="pickup_zone">Pickup Zone: </string>
    <string name="delivery_zone">Delivery Zone : </string>
    <string name="total_pcs">Total Pcs : </string>
    <string name="invoice">Invoice : </string>

    <!--Buttons Name-->
    <string name="rememberme">Remember Me</string>
    <string name="faq"> <u>FAQ? </u></string>
    <string name="upload">Upload</string>
    <string name="server_empty">Server Empty</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="select_reason">Select Reason</string>
    <string name="enter_bagid">Enter Bag ID</string>
    <string name="search">Search</string>
    <string name="mobileno_notfound">Mobile Number Not Found</string>
    <string name="SAUserID">SAUserId</string>
    <string name="update_status">UPDATE STATUS</string>

    <string-array name="nav_item_activity_titles">
        <item>Pickup</item>
        <item>PTP Branch</item>
        <item>PTP Online</item>
        <item>Claims Paid</item>
        <item>Dispute Management</item>
        <item>NC Validation</item>
        <item>Upload</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>

    <string name="menu_pickup">Pickup</string>
    <string name="menu_ptp_branch">PTP Branch</string>
    <string name="menu_ptp_online">PTP Online</string>
    <string name="menu_claims_paid">Claims Paid</string>
    <string name="menu_dispute_mgnt">Dispute Management</string>
    <string name="menu_nc_validation">NC Validation</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_changepassword">Change Password</string>
    <string name="menu_logout">Logout</string>
   <!-- <string name="map_apikey">AIzaSyBeigI5iExywf7LkBeLCkFBzjk-xFJYuTA</string>-->
    <string name="map_apikey">AIzaSyDegoUQWS5hjEES-ryokX_4CAnavNNwW2Y</string>
</resources>
