<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_vers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:padding="5dp"
            android:textColor="@color/text_primary"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/kodak" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/editext_black"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="Username"
            android:inputType="textNoSuggestions"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_primary"
            android:textCursorDrawable="@drawable/color_cursor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/text_primary"
            android:textCursorDrawable="@drawable/color_cursor" />
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/border_btnbg"
        android:text="@string/signin"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rememberme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/text_primary"
            android:checked="false"
            android:text="@string/rememberme"
            android:textColor="@color/text_primary"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end|center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/text_primary"
            android:textSize="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/faq"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        android:textStyle="bold" />
</LinearLayout>